--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ a{
   border: none;
   font-weight: bold;
   border-radius: 0.6rem;
-  margin: 1rem;
+  margin-top: 2rem;
 }
 .btn:active{
   color: black;
